fix errors on firefox and safari browsers

--- a/src/components/LineCircles/style.scss
+++ b/src/components/LineCircles/style.scss
@@ -3,18 +3,19 @@
 .c-line-circles {
   opacity: 0;
   position: fixed;
-  left: 50%;
-  top: 50%;
-  transform: translate(-50%,-50%);
-  transition: opacity .2s $cubic;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  width: 100%;
+  height: 100%;
 
   img {
-    position: absolute;
+    position: fixed;
     transform-origin: 50% 50%;
     display: block;
+    top: -100%;
+    right: -100%;
+    left: -100%;
+    bottom: -100%;
+    margin: auto;
+    z-index: 11;
 
     &.-spin {
       animation: spin infinite 10s linear;
