--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -13,6 +13,7 @@ body {
 p {
   -webkit-margin-before: 0;
   -webkit-margin-after: 0;
+  margin: 0;
 }
 
 .hidden {
